[project]
name = "comfyui-joycaption"
description = "An extension for using joycaption (pre alpha) in comfyui"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/larsupb/comfyui-joycaption.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "larsupb"
DisplayName = "ComfyUI-Joycaption"
Icon = ""
